[workspace]
members = ["rust/operator-binary", "rust/csi-grpc", "rust/olm-deployer"]
resolver = "2"

[workspace.package]
version = "25.7.0"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/listener-operator"

[workspace.dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", features = ["telemetry", "versioned"], tag = "stackable-operator-0.94.0" }

anyhow = "1.0"
built = { version = "0.8", features = ["chrono", "git2"] }
clap = "4.5"
const_format = "0.2"
futures = { version = "0.3" }
h2 = "0.4"
libc = "0.2"
pin-project = "1.1"
prost = "0.13"
prost-types = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
strum = { version = "0.27", features = ["derive"] }
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.13"
tonic-build = "0.13"
tonic-reflection = "0.13"
tracing = "0.1.40"
walkdir = "2.5.0"

[patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
