[workspace]
members = ["rust/operator-binary", "rust/csi-grpc", "rust/olm-deployer"]
resolver = "2"

[workspace.package]
version = "25.11.0-rc1"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/listener-operator"

[workspace.dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.100.2", features = ["telemetry", "versioned"] }

anyhow = "1.0"
built = { version = "0.8", features = ["chrono", "git2"] }
clap = "4.5"
const_format = "0.2"
futures = { version = "0.3" }
h2 = "0.4"
libc = "0.2"
pin-project = "1.1"
prost = "0.14"
prost-types = "0.14"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
strum = { version = "0.27", features = ["derive"] }
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tracing = "0.1.40"
walkdir = "2.5.0"

# We pin the kube version, as we use a patch for 2.0.1 below
kube = "=2.0.1"
[patch.crates-io]
kube = { git = "https://github.com/stackabletech/kube-rs", branch = "2.0.1-fix-schema-hoisting" }

[patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
