[package]
name = "csi-grpc"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Rust bindings for the CSI GRPC API"
license = "Apache-2.0"
version = "23.4.1"
edition = "2021"
repository = "https://github.com/stackabletech/listener-operator"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.3"
prost-types = "0.10.1"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"