[package]
name = "csi-grpc"
description = "Rust bindings for the CSI GRPC API"
version.workspace = true
authors.workspace = true
license = "Apache-2.0"
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
