[package]
name = "stackable-listener-operator"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for network listeners"
license = "OSL-3.0"
version = "0.1.0-nightly"
edition = "2021"
repository = "https://github.com/stackabletech/listener-operator"
publish = false

[dependencies]
# Need to keep this in sync with our patched h2 build
h2 = "=0.3.7"

clap = { version = "4.0", features = ["derive"] }
futures = "0.3.21"
libc = "0.2.125"
pin-project = "1.0.10"
prost = "0.10.3"
socket2 = { version = "0.4.4", features = ["all"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.27.1" }
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tonic = "0.8.3"
tonic-reflection = "0.4.0"
anyhow = "1.0.57"
serde = "1.0.137"
snafu = "0.7.1"
strum = "0.24.1"
csi-grpc = { path = "../csi-grpc" }

[build-dependencies]
built = { version = "0.5.1", features = ["chrono", "git2"] }
