[package]
name = "stackable-listener-operator"
description = "Stackable Operator for network listeners"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
csi-grpc = { path = "../csi-grpc" }

clap.workspace = true
futures.workspace = true
libc.workspace = true
pin-project.workspace = true
prost.workspace = true
socket2.workspace = true
stackable-operator.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
anyhow.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
h2.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true
